--- a/index.html
+++ b/index.html
@@ -1,68 +1,95 @@
 <!doctype html>
 <html ng-app="myApp">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Angular-no-captcha by CodeDistillery</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <script src="public/libs/angular/angular.js"></script>
+    <title>Angular-no-captcha test by CodeDistillery</title>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script>
+    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
     <script src="public/libs/angular-no-captcha/src/angular-no-captcha.js"></script>
     <script>
-      angular.module('myApp', ['noCAPTCHA'])
-        .config(['noCAPTCHAProvider', function (noCaptchaProvider) {
-          noCaptchaProvider.setSiteKey('6LdF-_4SAAAAAOlhwSyvDsOfE_zCgo8Dj3YOG98X');
-          noCaptchaProvider.setTheme('dark');
-        }]).controller('myCaptchaController', ['$scope', function($scope){
-          $scope.captchaControl = {};
-          $scope.resetCaptcha = function(){
-            if(captchaControl.reset){
-              captchaControl.reset();
-            }
-          };
-        }]);
+angular.module('ui.bootstrap.demo', ['ui.bootstrap', 'noCAPTCHA']);
+angular.module('ui.bootstrap.demo')
+.config(['noCAPTCHAProvider', function (noCaptchaProvider) {
+    noCaptchaProvider.setSiteKey('6LdrPwYTAAAAAL83RC9atPZpE68fmExy8eesG5DG');
+    noCaptchaProvider.setTheme('dark');
+  }]);
+angular.module('ui.bootstrap.demo')
+.controller('ModalDemoCtrl', function ($scope, $modal, $log) {
+  $scope.$watch('gRecaptchaResponse', function(){
+    console.log($scope.gRecaptchaResponse);
+  });
+  
+  $scope.items = ['item1', 'item2', 'item3'];
+
+  $scope.animationsEnabled = true;
+
+  $scope.open = function (size) {
+
+    var modalInstance = $modal.open({
+      animation: $scope.animationsEnabled,
+      templateUrl: 'myModalContent.html',
+      controller: 'ModalInstanceCtrl',
+      size: size,
+      resolve: {
+        items: function () {
+          return $scope.items;
+        }
+      }
+    });
+
+    modalInstance.result.then(function (selectedItem) {
+      $scope.selected = selectedItem;
+    }, function () {
+      $log.info('Modal dismissed at: ' + new Date());
+    });
+  };
+
+  $scope.toggleAnimation = function () {
+    $scope.animationsEnabled = !$scope.animationsEnabled;
+  };
+
+});
+
+// Please note that $modalInstance represents a modal window (instance) dependency.
+// It is not the same as the $modal service used above.
+
+angular.module('ui.bootstrap.demo').controller('ModalInstanceCtrl', function ($scope, $modalInstance, items) {
+
+  $scope.items = items;
+  $scope.selected = {
+    item: $scope.items[0]
+  };
+
+  $scope.ok = function () {
+    $modalInstance.close($scope.selected.item);
+  };
+
+  $scope.cancel = function () {
+    $modalInstance.dismiss('cancel');
+  };
+});
     </script>
-
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
   </head>
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="//github.com/CodeDistillery/angular-no-captcha">View On GitHub</a></li>
-          <li class="downloads"><a href="//github.com/CodeDistillery/angular-no-captcha/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="//github.com/CodeDistillery/angular-no-captcha/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
-
-    <div class="wrapper">
-
-      <section ng-controller="myCaptchaController">
-        <div id="title">
-          <h1>Angular-no-captcha</h1>
-          <p>Angular.JS wrapper for Google&#39;s No CAPTCHA reCAPTCHA</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="//github.com/CodeDistillery">CodeDistillery</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="//twitter.com/michigangraham">mattgraham</a></span>
-        </div>
-
-        <h3>Example Form</h3>
-        <no-captcha g-recaptcha-response="gRecaptchaResponse" control="captchaControl"></no-captcha>
-        <button ng-click="captchaControl.reset()">Reset Captcha</button>
-        $scope.gRecaptchaResponse = <p>{{gRecaptchaResponse}}</p>
-      </section>
-
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+  <div ng-controller="ModalDemoCtrl">
+      <script type="text/ng-template" id="myModalContent.html">
+          <div class="modal-header">
+              <h3 class="modal-title">I'm a modal!</h3>
+          </div>
+          <div class="modal-body">
+              <no-captcha
+                  g-recaptcha-response="gRecaptchaResponse">
+              </no-captcha>
+          </div>
+          <div class="modal-footer">
+              <button class="btn btn-primary" ng-click="ok()">OK</button>
+              <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+          </div>
+      </script>
+  
+      <button class="btn btn-default" ng-click="open()">Open me!</button>
+      <button class="btn btn-default" ng-click="toggleAnimation()">Toggle Animation ({{ animationsEnabled }})</button>
+      <div ng-show="selected">Selection from a modal: {{ selected }}</div>
+  </div>
   </body>
 </html>
