--- a/index.html
+++ b/index.html
@@ -66,15 +66,18 @@ angular.module('ui.bootstrap.demo').controller('ModalInstanceCtrl', function ($s
     </script>
   </head>
   <body>
+    <div ng-controller="ModalDemoCtrl">
+  <no-captcha
+    g-recaptcha-response="gRecaptchaResponse">
+  </no-captcha>
+  </div>
   <div ng-controller="ModalDemoCtrl">
       <script type="text/ng-template" id="myModalContent.html">
           <div class="modal-header">
               <h3 class="modal-title">I'm a modal!</h3>
           </div>
           <div class="modal-body">
-              <no-captcha
-                  g-recaptcha-response="gRecaptchaResponse">
-              </no-captcha>
+
           </div>
           <div class="modal-footer">
               <button class="btn btn-primary" ng-click="ok()">OK</button>
