--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@ angular.module('ui.bootstrap.demo').controller('ModalInstanceCtrl', function ($s
               <h3 class="modal-title">I'm a modal!</h3>
           </div>
           <div class="modal-body">
-
+            <no-captcha
+              g-recaptcha-response="gRecaptchaResponse">
+            </no-captcha>
           </div>
           <div class="modal-footer">
               <button class="btn btn-primary" ng-click="ok()">OK</button>
