--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@ angular.module('ui.bootstrap.demo')
   $scope.$watch('gRecaptchaResponse', function(){
     console.log($scope.gRecaptchaResponse);
   });
-  
-  $scope.items = ['item1', 'item2', 'item3'];
+
 
   $scope.animationsEnabled = true;
 
@@ -48,12 +47,7 @@ angular.module('ui.bootstrap.demo')
 // Please note that $modalInstance represents a modal window (instance) dependency.
 // It is not the same as the $modal service used above.
 
-angular.module('ui.bootstrap.demo').controller('ModalInstanceCtrl', function ($scope, $modalInstance, items) {
-
-  $scope.items = items;
-  $scope.selected = {
-    item: $scope.items[0]
-  };
+angular.module('ui.bootstrap.demo').controller('ModalInstanceCtrl', function ($scope, $modalInstance) {
 
   $scope.ok = function () {
     $modalInstance.close($scope.selected.item);
