--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ angular.module('ui.bootstrap.demo').controller('ModalInstanceCtrl', function ($s
           <div class="modal-header">
               <h3 class="modal-title">I'm a modal!</h3>
           </div>
-          <div class="modal-body" ng-controller="CaptchaCtrl">
+          <div class="modal-body">
             <no-captcha
               g-recaptcha-response="gRecaptchaResponse">
             </no-captcha>
